--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-boilerplate",
   "version": "1.0.0",
-  "description": "Basic boilerplate project with Typecript",
+  "description": "Basic boilerplate project with Typescript",
   "main": "build/main.js",
   "engineStrict": true,
   "engines": {
